Prepare for 2.0 by removing old cruft