@@ -17,7 +17,7 @@
 
     <properties>
         <module.name>com.blazebit.persistence.examples.showcase.runner.cdi</module.name>
-        <version.deltaspike>${version.deltaspike-1.9}</version.deltaspike>
+        <version.deltaspike>${version.deltaspike-2.0}</version.deltaspike>
     </properties>
 
     <dependencyManagement>
@@ -34,11 +34,31 @@
 
     <dependencies>
         <dependency>
-            <groupId>javax</groupId>
-            <artifactId>javaee-api</artifactId>
-            <version>8.0</version>
+            <groupId>jakarta.persistence</groupId>
+            <artifactId>jakarta.persistence-api</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>jakarta.transaction</groupId>
+            <artifactId>jakarta.transaction-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.interceptor</groupId>
+            <artifactId>jakarta.interceptor-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.inject</groupId>
+            <artifactId>jakarta.inject-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>jakarta.enterprise</groupId>
+            <artifactId>jakarta.enterprise.cdi-api</artifactId>
+            <scope>provided</scope>
+        </dependency>
+
         <dependency>
             <groupId>${project.groupId}</groupId>
             <artifactId>blaze-persistence-core-api</artifactId>
@@ -67,7 +87,7 @@
         </dependency>
         <dependency>
             <groupId>${project.groupId}</groupId>
-            <artifactId>blaze-persistence-integration-hibernate-5.2</artifactId>
+            <artifactId>blaze-persistence-integration-hibernate-6.2</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
@@ -84,18 +104,6 @@
             <groupId>org.jboss.weld.se</groupId>
             <artifactId>weld-se-core</artifactId>
             <version>${version.weld}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.jboss</groupId>
-                    <artifactId>jandex</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
-        <!-- Since we are including a module-info.class file, we need at least 2.0.4.Final -->
-        <dependency>
-            <groupId>org.jboss</groupId>
-            <artifactId>jandex</artifactId>
-            <version>${version.jandex}</version>
         </dependency>
 
         <dependency>
@@ -140,9 +148,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>${version.hibernate-5.2}</version>
+            <groupId>org.hibernate.orm</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>${version.hibernate-6.6}</version>
             <scope>runtime</scope>
             <exclusions>
                 <exclusion>
@@ -156,13 +164,6 @@
             <artifactId>h2</artifactId>
             <version>${h2.version}</version>
             <scope>runtime</scope>
-        </dependency>
-
-        <dependency>
-            <groupId>jakarta.transaction</groupId>
-            <artifactId>jakarta.transaction-api</artifactId>
-            <version>${version.jta}</version>
-            <scope>test</scope>
         </dependency>
 
         <!-- Test dependencies -->
@@ -198,7 +199,7 @@
         <dependency>
             <groupId>jakarta.annotation</groupId>
             <artifactId>jakarta.annotation-api</artifactId>
-            <version>${version.annotation}</version>
+            <version>${version.annotation-api}</version>
         </dependency>
     </dependencies>
 
@@ -216,26 +217,12 @@
 
     <profiles>
         <profile>
-            <id>deltaspike-1.7</id>
-            <properties>
-                <version.weld>2.4.5.Final</version.weld>
-                <version.deltaspike>${version.deltaspike-1.7}</version.deltaspike>
-            </properties>
-        </profile>
-        <profile>
-            <id>deltaspike-1.8</id>
-            <properties>
-                <version.weld>2.4.5.Final</version.weld>
-                <version.deltaspike>${version.deltaspike-1.8}</version.deltaspike>
-            </properties>
-        </profile>
-        <profile>
-            <id>deltaspike-1.9</id>
+            <id>deltaspike-2.0</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <version.deltaspike>${version.deltaspike-1.9}</version.deltaspike>
+                <version.deltaspike>${version.deltaspike-2.0}</version.deltaspike>
             </properties>
         </profile>
         <profile>
@@ -261,48 +248,6 @@
 
         <!-- skip tests for non-hibernate profiles -->
         <profile>
-            <id>datanucleus-4</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>datanucleus-5</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
-            <id>datanucleus-5.1</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-        <profile>
             <id>eclipselink</id>
             <build>
                 <plugins>
@@ -315,30 +260,6 @@
                     </plugin>
                 </plugins>
             </build>
-        </profile>
-        <profile>
-            <id>openjpa</id>
-            <build>
-                <plugins>
-                    <plugin>
-                        <groupId>org.apache.maven.plugins</groupId>
-                        <artifactId>maven-surefire-plugin</artifactId>
-                        <configuration>
-                            <skip>true</skip>
-                        </configuration>
-                    </plugin>
-                </plugins>
-            </build>
-        </profile>
-
-        <profile>
-            <id>post-10</id>
-            <activation>
-                <jdk>[11,)</jdk>
-            </activation>
-            <properties>
-                <surefire.jvm.params>--add-opens java.base/java.lang=ALL-UNNAMED</surefire.jvm.params>
-            </properties>
         </profile>
     </profiles>
 
